Cleanup not-needed stuff